# peptides

./: pyproject.toml
peptides/: generator_feedback.py  timeit.py
peptides/random/: __init__.py  core.py  extra.py
peptides/ranges/: __init__.py
peptides/reducers/: __init__.py
peptides/timeit/: __init__.py  __main__.py  ui.py
tests/: infrastructure.py  test_peptides.py  test_random.py  test_ranges.py  test_timeit.py
