[tool.poetry]
name = "peptides"
version = "0.1.0"
description = ""
authors = ["Karl Knechtel <karl.a.knechtel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
# since 6.0, pytest can be configured within pyproject.toml itself.
pytest = "^6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
markers = ["slow: mark a test that takes a long time to run."]
